--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "@erc7824/nitrolite": "^0.5.3",
     "@privy-io/react-auth": "^3.13.0",
     "next": "16.1.6",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "tmi.js": "^1.8.5",
+    "viem": "^2.45.1",
     "websocket-ts": "^2.2.1"
   },
   "devDependencies": {
