--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -31,6 +31,7 @@
   "include": [
     "next-env.d.ts",
     "twitch-embed.d.ts",
+    "lib/types/**/*.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
