--- a/contracts/package.json
+++ b/contracts/package.json
@@ -2,6 +2,7 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
+    "dotenv": "^17.2.4",
     "hardhat": "^2.28.4"
   }
 }
